// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputWithIcon should render all appearances with iconEnd 1`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

<div
  data-cy="textInput textInput.standard"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    hidden={false}
    htmlFor="test.icon_end_input.standard"
  >
    standard
  </label>
  <Memo(FormFieldWrapper)
    id="test.icon_end_input.standard"
  >
    <Component />
  </Memo(FormFieldWrapper)>
</div>
`;

exports[`TextInputWithIcon should render all appearances with iconEnd 2`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
  color: var(--themeError, #EB293A);
  fill: var(--themeError, #EB293A);
}

<div
  data-cy="textInput textInput.error"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    hidden={false}
    htmlFor="test.icon_end_input.error"
  >
    error
  </label>
  <Memo(FormFieldWrapper)
    id="test.icon_end_input.error"
  >
    <Component />
  </Memo(FormFieldWrapper)>
</div>
`;

exports[`TextInputWithIcon should render all appearances with iconEnd 3`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

<div
  data-cy="textInput textInput.success"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    hidden={false}
    htmlFor="test.icon_end_input.success"
  >
    success
  </label>
  <Memo(FormFieldWrapper)
    id="test.icon_end_input.success"
  >
    <Component />
  </Memo(FormFieldWrapper)>
</div>
`;

exports[`TextInputWithIcon should render all appearances with iconStart 1`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

<div
  data-cy="textInput textInput.standard"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    hidden={false}
    htmlFor="test.icon_start_input.standard"
  >
    standard
  </label>
  <Memo(FormFieldWrapper)
    id="test.icon_start_input.standard"
  >
    <Component />
  </Memo(FormFieldWrapper)>
</div>
`;

exports[`TextInputWithIcon should render all appearances with iconStart 2`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
  color: var(--themeError, #EB293A);
  fill: var(--themeError, #EB293A);
}

<div
  data-cy="textInput textInput.error"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    hidden={false}
    htmlFor="test.icon_start_input.error"
  >
    error
  </label>
  <Memo(FormFieldWrapper)
    id="test.icon_start_input.error"
  >
    <Component />
  </Memo(FormFieldWrapper)>
</div>
`;

exports[`TextInputWithIcon should render all appearances with iconStart 3`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

<div
  data-cy="textInput textInput.success"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    hidden={false}
    htmlFor="test.icon_start_input.success"
  >
    success
  </label>
  <Memo(FormFieldWrapper)
    id="test.icon_start_input.success"
  >
    <Component />
  </Memo(FormFieldWrapper)>
</div>
`;

exports[`TextInputWithIcon should render all appearances with twoIcons 1`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

<div
  data-cy="textInput textInput.standard"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    hidden={false}
    htmlFor="test.two_icon_input.standard"
  >
    standard
  </label>
  <Memo(FormFieldWrapper)
    id="test.two_icon_input.standard"
  >
    <Component />
  </Memo(FormFieldWrapper)>
</div>
`;

exports[`TextInputWithIcon should render all appearances with twoIcons 2`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
  color: var(--themeError, #EB293A);
  fill: var(--themeError, #EB293A);
}

<div
  data-cy="textInput textInput.error"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    hidden={false}
    htmlFor="test.two_icon_input.error"
  >
    error
  </label>
  <Memo(FormFieldWrapper)
    id="test.two_icon_input.error"
  >
    <Component />
  </Memo(FormFieldWrapper)>
</div>
`;

exports[`TextInputWithIcon should render all appearances with twoIcons 3`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

<div
  data-cy="textInput textInput.success"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    hidden={false}
    htmlFor="test.two_icon_input.success"
  >
    success
  </label>
  <Memo(FormFieldWrapper)
    id="test.two_icon_input.success"
  >
    <Component />
  </Memo(FormFieldWrapper)>
</div>
`;
